Add title tags to respective sections

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="main-content">
         <div class="project-list">
-          Your Projects
+          <h5>Your Projects</h5>
 
           <ul>
             <li>
@@ -99,6 +99,8 @@
         </div>
 
         <div class="announcements">
+          <h5>Announcements</h5>
+
           <ul>
             <li>
               <h6>Site Maintenance</h6>
@@ -116,6 +118,8 @@
         </div>
 
         <div class="trending">
+          <h5>Trending</h5>
+
           <ul>
             <li>
               <img src="" alt="user-logo" />
