--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. At beatae quam odit dolorem officia odio nobis voluptate, consequatur
                 officiis hic quis nihil in, sunt accusantium architecto quos cumque. In, magni!
               </p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
             <li>
               <h5>Less Cool Project</h5>
@@ -71,10 +76,20 @@
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minima magnam ex quam ratione culpa mollitia omnis debitis tempore
                 reiciendis eveniet aliquid officia incidunt odio, quo quidem voluptatem illo! Dolores, saepe?
               </p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
             <li>
               <h5>Impossible App</h5>
               <p>Quis fugiat anim adipisicing occaecat culpa nostrud proident sit quis est laborum est veniam.</p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
             <li>
               <h5>Easy Peasy App</h5>
@@ -82,10 +97,20 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod reprehenderit ratione, excepturi cumque placeat, odio adipisci eius
                 quisquam sapiente officia nemo earum quas veritatis quo ullam, quaerat culpa molestias nostrum!
               </p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
             <li>
               <h5>Ad Blocker</h5>
               <p>Elit eiusmod adipisicing aute aliquip nulla excepteur tempor ex cillum anim nostrud est.</p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
             <li>
               <h5>Money Maker</h5>
@@ -94,62 +119,69 @@
                 eiusmod occaecat pariatur dolore do magna nisi incididunt sit commodo qui. Duis elit magna esse do sit deserunt cupidatat cupidatat
                 deserunt cillum veniam.
               </p>
+              <div>
+                <img src="" alt="favourite" />
+                <img src="" alt="view" />
+                <img src="" alt="share" />
+              </div>
             </li>
           </ul>
         </div>
 
-        <div class="announcements">
-          <h5>Announcements</h5>
+        <div class="announcements-trending">
+          <div class="announcements">
+            <h5>Announcements</h5>
 
-          <ul>
-            <li>
-              <h6>Site Maintenance</h6>
-              <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
-            </li>
-            <li>
-              <h6>Community Share Dy</h6>
-              <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
-            </li>
-            <li>
-              <h6>Updated Privacy Policy</h6>
-              <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
-            </li>
-          </ul>
-        </div>
+            <ul>
+              <li>
+                <h6>Site Maintenance</h6>
+                <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
+              </li>
+              <li>
+                <h6>Community Share Dy</h6>
+                <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
+              </li>
+              <li>
+                <h6>Updated Privacy Policy</h6>
+                <p>Non cillum do id cupidatat pariatur ipsum laborum velit veniam fugiat ea mollit.</p>
+              </li>
+            </ul>
+          </div>
 
-        <div class="trending">
-          <h5>Trending</h5>
+          <div class="trending">
+            <h5>Trending</h5>
 
-          <ul>
-            <li>
-              <img src="" alt="user-logo" />
-              <div>
-                <div class="tag">@tegan</div>
-                <div class="title">World Peace Builder</div>
-              </div>
-            </li>
-            <li>
-              <img src="" alt="user-logo" />
-              <div>
-                <div class="tag">@morgan</div>
-                <div class="title">Super Cool Project</div>
-              </div>
-            </li>
-            <li>
-              <img src="" alt="user-logo" />
-              <div>
-                <div class="tag">@kendall</div>
-                <div class="title">Life Changing App</div>
-              </div>
-            </li>
-            <li>
-              <img src="" alt="user-logo" />
-              <div>
-                <div class="tag">@alex</div>
-                <div class="title">No Traffic Maker</div>
-              </div>
-            </li>
-          </ul>
+            <ul>
+              <li>
+                <img src="" alt="user-logo" />
+                <div>
+                  <div class="tag">@tegan</div>
+                  <div class="title">World Peace Builder</div>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="user-logo" />
+                <div>
+                  <div class="tag">@morgan</div>
+                  <div class="title">Super Cool Project</div>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="user-logo" />
+                <div>
+                  <div class="tag">@kendall</div>
+                  <div class="title">Life Changing App</div>
+                </div>
+              </li>
+              <li>
+                <img src="" alt="user-logo" />
+                <div>
+                  <div class="tag">@alex</div>
+                  <div class="title">No Traffic Maker</div>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </div>
