Fix overflow issue

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
       </div>
 
-      <div>
+      <div class="main-body">
         <div class="header">
           <div class="search">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
